--- a/drivers/templates/drivers/index.html
+++ b/drivers/templates/drivers/index.html
@@ -99,6 +99,7 @@
                     {% endif %}
                   </div>
                   <div>
+                    <div class="text-heading">{{ driver.code }}</div>
                     <h6>{{ driver.full_name }}</h6>
                     <p>DNI {{ driver.dni }}</p>
                   </div>
