--- a/orders/templates/orders/add-addresses.html
+++ b/orders/templates/orders/add-addresses.html
@@ -24,7 +24,8 @@
                     </div>
                 </div>
                 <div class="form-modal">
-                    <div class="list__group">
+                    <p>Hola, Somos CuyClick, una manera segura y rápida de realizar tus envíos. A continuación te dejaremos nuestro tarifario, según kilometraje a recorrer:</p>
+                    <div class="list__group mt-2">
                         <p class="list__item">
                             <i class="bx bx-check bx-sm text-success"></i>
                             <span>DE OKM A 13KM S/10.00</span>
@@ -66,7 +67,7 @@
                 </div>
                 <div class="step-content">
                     <div class="text-small caption">Paso 1</div>
-                    <h6>Información del cliente</h6>
+                    <h6>Información del remitente</h6>
                 </div>
                 <div class="step-progress-mobile"></div>
             </div>
