--- a/orders/templates/orders/payment-success.html
+++ b/orders/templates/orders/payment-success.html
@@ -8,7 +8,7 @@
 {% block content %}
  <div class="card card-form card-message mt-6 mb-10">
     <div class="mb-4 flex justify-start">
-        <div class="icon icon-success icon-cicle icon-xl">
+        <div class="icon icon-success icon-circle icon-xl">
           <i class='bx bx-check-circle bx-xl'></i>
         </div>
     </div>
