--- a/authentication/templates/auth/login.html
+++ b/authentication/templates/auth/login.html
@@ -19,5 +19,9 @@
     <button type="submit" class="btn btn-primary btn-full">Ingresar</button>
   </form>
   <p>¿No tengo una cuenta? <a href="{% url 'auth:register' %}" class="link">Registrarse</a></p>
+  <div class="w-full flex justify-center">
+    <a href="{% url 'password_reset' %}" class="link">¿Olvidaste tu contraseña?</a>
+  </div>
+
 </div>
 {% endblock content %}
