--- a/courier_app/static/css/components/icon.css
+++ b/courier_app/static/css/components/icon.css
@@ -46,7 +46,7 @@
     background: rgba(var(--danger-color), .2);
     color: rgb(var(--danger-color));
 }
-.icon-cicle{
+.icon-circle{
     border-radius: 50%;
 }
 .icon-sm{
