--- a/drivers/templates/drivers/delete.html
+++ b/drivers/templates/drivers/delete.html
@@ -15,7 +15,7 @@
 {% block content %}
  <div class="card card-form card-delete mb-10">
     <div class="mb-4 flex justify-start">
-        <div class="icon icon-danger-default icon-cicle icon-xl">
+        <div class="icon icon-danger-default icon-circle icon-xl">
           <i class='bx bxs-info-circle'></i> 
         </div>
     </div>
