--- a/orders/templates/orders/mails/origin-complete-order.html
+++ b/orders/templates/orders/mails/origin-complete-order.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <img src="{{site}}{{ STATIC_URL }}img/logo-light.png" alt="CuyClick - Perú">
+    <img src="{{ protocol }}://{{ domain }}{% static 'img/logo-light.png' %}" alt="CuyClick - Perú">
   </header>
   <section class="container">
     <div class="head">
