--- a/orders/templates/orders/payment.html
+++ b/orders/templates/orders/payment.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="step-content">
                         <div class="text-small caption">Paso 1</div>
-                        <h6>Información del cliente</h6>
+                        <h6>Información del remitente</h6>
                     </div>
                     <div class="step-progress-mobile"></div>
                 </div>
