--- a/clients/templates/clients/complete-address.html
+++ b/clients/templates/clients/complete-address.html
@@ -108,7 +108,7 @@
         this.isOpen = false;
 
       },
-      geocodeLatLng(geocoder, map, infowindow) {
+      geocodeLatLng(geocoder, map, infoWindow) {
         geocoder.geocode({ location: this.address.position }, (results, status) => {
           if (status === "OK") {
             if (results[0]) {
@@ -118,8 +118,8 @@
                 position: this.address.position,
                 map: map,
               });
-              infowindow.setContent(results[0].formatted_address);
-              infowindow.open(map, marker);
+              infoWindow.setContent(results[0].formatted_address);
+              infoWindow.open(map, marker);
             } else {
               window.alert("No results found");
             }
@@ -128,7 +128,7 @@
           }
         });
       },
-      currentPosition(geocoder, infowindow) {
+      currentPosition(geocoder, infoWindow) {
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(
             (position) => {
@@ -140,7 +140,7 @@
               };
               map.setCenter(this.address.position);
               window.address = this.address;
-              this.geocodeLatLng(geocoder, map, infowindow);
+              this.geocodeLatLng(geocoder, map, infoWindow);
             },
             () => {
               handleLocationError(true, infoWindow, map.getCenter());
