--- a/details/templates/details/origin-map.html
+++ b/details/templates/details/origin-map.html
@@ -35,40 +35,43 @@
             <p>Sin ninguna nota.</p>
             {% endif %}
             <p class="mt-4">
-                <h5 class="mb-2 font-bold">Dirección de recojo</h5>
-                <p>{{ detail.get_tracking_code_text }}</p>
-                <h6>{{ detail.address_origin.address_complete }}</h6>
-                <h6 class="mt-2">N° de puerta/Lte/Mz/Dpto/Piso</h6>
-                <p>{{ detail.address_origin.address_detail }}</p>
-                <h6 class="mt-2">Referencia</h6>
-                <p>{{ detail.address_origin.reference }}</p>
-            </div>
-            <div class="mt-4">
-                <h5 class="mb-2 font-bold">¿Quién atenderá al motorizado?</h5>
-                <h6>{{ detail.address_origin.full_name }}</h6>
-                <p class="flex items-center">
-                    <i class="bx bx-mobile-alt bx-xs" style="margin-right: 5px;"></i>
-                    <span>{{ detail.address_origin.cell_phone }}</span>
-                </p>
-            </div>
-            {% if not detail.is_delivered or perms.add_unassigndeliveryaddress or detail.status == 'ER' %}
-            <div class="actions full">
-                <a href="{% url 'details:received' pk=detail.pk %}" class="btn btn-secondary btn-small btn-rounded">
-                    <i class="bx bx-ckeck-circle bx-sm"></i>
-                    <span>Marcar como recepcionado</span>
-                </a>
-            </div>
-            {% endif %}
+            <h5 class="mb-2 font-bold">Dirección de recojo</h5>
+            <p>{{ detail.get_tracking_code_text }}</p>
+            <h6>{{ detail.address_origin.address_complete }}</h6>
+            <h6 class="mt-2">N° de puerta/Lte/Mz/Dpto/Piso</h6>
+            <p>{{ detail.address_origin.address_detail }}</p>
+            <h6 class="mt-2">Referencia</h6>
+            <p>{{ detail.address_origin.reference }}</p>
         </div>
+        <div class="mt-4">
+            <h5 class="mb-2 font-bold">¿Quién atenderá al motorizado?</h5>
+            <h6>{{ detail.address_origin.full_name }}</h6>
+            <p class="flex items-center">
+                <i class="bx bx-mobile-alt bx-xs" style="margin-right: 5px;"></i>
+                <span>{{ detail.address_origin.cell_phone }}</span>
+            </p>
+        </div>
+        {% if not detail.is_delivered or perms.add_unassigndeliveryaddress or detail.status == 'ER' %}
+        <div class="actions full">
+            <a href="{% url 'details:received' pk=detail.pk %}" class="btn btn-secondary btn-small btn-rounded">
+                <i class="bx bx-ckeck-circle bx-sm"></i>
+                <span>Marcar como recepcionado</span>
+            </a>
+        </div>
+        {% endif %}
     </div>
 </div>
+</div>
 <div id="key" data-value="{% get_env_var 'GOOGLE_MAP_KEY' %}"></div>
+<div id="detail" style="display: none;">{{detail|jsonify}}</div>
+<div id="driver" style="display: none;">{{driver|jsonify}}</div>
 {% endblock content %}
 
 {% block scripts %}
 <script>
     (function () {
         loadScript();
+        setTrackingOrder();
     })()
 
     function loadScript() {
@@ -92,61 +95,58 @@
         // Append the 'script' element to 'head'
         document.head.appendChild(script);
     }
-    function addN(){
-            return 0.2222 + Math.random(0.0002, 0.00055);
-    }
 
     function getDrawRoute() {
         var directionsDisplay = new google.maps.DirectionsRenderer({ 'draggable': false });
         var directionsService = new google.maps.DirectionsService();
         var address = {{ detail.address_origin| jsonify }}[0];
-        var address_destiny_text = `${address.fields.address}, ${address.fields.district}, ${address.fields.city}`;
-        var address_destiny_content = `
+    var address_destiny_text = `${address.fields.address}, ${address.fields.district}, ${address.fields.city}`;
+    var address_destiny_content = `
             <p>${address_destiny_text}</p>
             <h5 class="mb-2 font-bold">¿Quién atenderá al motorizado?</h5>
-            <h6>${ address.fields.full_name }</h6>
+            <h6>${address.fields.full_name}</h6>
             <p class="flex items-center">
                 <i class="bx bx-mobile-alt bx-xs" style="margin-right: 5px;"></i>
-                <span>${ address.fields.cell_phone }</span>
+                <span>${address.fields.cell_phone}</span>
             </p>
         `;
-        {% if driver %}
-        var driver = {{ driver|jsonify }}[0];
-        var address_origin_text = `${driver.fields.address}, ${driver.fields.district}`;
-        const address_origin_content = `
+    {% if driver %}
+    var driver = {{ driver| jsonify }}[0];
+    var address_origin_text = `${driver.fields.address}, ${driver.fields.district}`;
+    const address_origin_content = `
             <p>${address_origin_text}</p>
             <h5 class="mb-2 font-bold">Datos del motorizado</h5>
-            <h6>${ driver.fields.first_name } ${ driver.fields.last_name }</h6>
+            <h6>${driver.fields.first_name} ${driver.fields.last_name}</h6>
             <p class="flex items-center">
                 <i class="bx bx-mobile-alt bx-xs" style="margin-right: 5px;"></i>
-                <span>${ driver.fields.cell_phone }</span>
+                <span>${driver.fields.cell_phone}</span>
             </p>
         `;
-        displayRoute(
-            address_origin_text,
-            address_destiny_text,
-            directionsService,
-            directionsDisplay,
-            address_origin_content,
-            address_destiny_content,
-        );
-        {% else %}
-            var position_package = JSON.parse(address.fields.address_gps);
-            var latLng = new google.maps.LatLng(position_package.lat, position_package.lng);
-            const marker = new google.maps.Marker({
-                position: latLng,
-                map,
-                title: "Dirección de recojo",
-                icon: "{% static 'icon/order-icon.svg' %}"
-            });
-            map.setCenter(latLng);
-            const infowindow = new google.maps.InfoWindow({
-                content: address_destiny_content,
-            });
-            marker.addListener("click", () => {
-                infowindow.open(map, marker);
-            });
-        {% endif %}
+    displayRoute(
+        address_origin_text,
+        address_destiny_text,
+        directionsService,
+        directionsDisplay,
+        address_origin_content,
+        address_destiny_content,
+    );
+    {% else %}
+    var position_package = JSON.parse(address.fields.address_gps);
+    var latLng = new google.maps.LatLng(position_package.lat, position_package.lng);
+    const marker = new google.maps.Marker({
+        position: latLng,
+        map,
+        title: "Dirección de recojo",
+        icon: "{% static 'icon/order-icon.svg' %}"
+    });
+    map.setCenter(latLng);
+    const infowindow = new google.maps.InfoWindow({
+        content: address_destiny_content,
+    });
+    marker.addListener("click", () => {
+        infowindow.open(map, marker);
+    });
+    {% endif %}
     }
     function displayRoute(origin_address, destiny_address, directionsService, directionsDisplay, address_origin_content, address_destiny_content) {
         directionsService.route({
@@ -170,6 +170,7 @@
                 var marker_origin = makeMarker(leg.start_location, "{% static 'icon/driver-icon.png' %}", origin_address, map);
                 var marker_destiny = makeMarker(leg.end_location, "{% static 'icon/order-icon.svg' %}", destiny_address, map);
                 map.setCenter(leg.start_location);
+                map.panTo(leg.start_location);
                 const infowindowOrigin = new google.maps.InfoWindow({
                     content: address_origin_content,
                 });
@@ -196,6 +197,75 @@
             icon: icon,
             title: title
         });
+    }
+    function setTrackingOrder() {
+        const detailDOM = document.getElementById('detail').textContent;
+        const driverDOM = document.getElementById('driver').textContent;
+        const detail = JSON.parse(detailDOM)[0];
+        const driver = JSON.parse(driverDOM)[0];
+        // console.log(json_detail);
+        const socket = new WebSocket(
+            `ws://${window.location.host}/ws/tracking/${detail.fields.tracking_code}/`
+        );
+        socket.onmessage = function (e) {
+            const data = JSON.parse(e.data);
+            console.log(data);
+        };
+        // socket.onclose = function (e) {
+        //     console.error('Websocket closed unexpectedly', e);
+        // };
+
+        if (driver) {
+            getLocationData();
+            socket.onopen = function () {
+                setInterval(getLocationData, 1000);
+                var message = JSON.stringify({
+                    'message': window.position
+                });
+                // console.log(window.position);
+                socket.send(message);
+                // setInterval(function() {
+                //     if (socket.bufferedAmount == 0)
+                //         getLocationData();
+                //         socket.send(JSON.stringify({
+                //             'message': window.position
+                //         }));
+                // }, 1000);
+            };
+            
+        }else{
+            console.log('no driver')
+        }
+
+        function getLocationData(){
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                    (position) => {
+                        address = {
+                            position: {
+                                lat: position.coords.latitude,
+                                lng: position.coords.longitude,
+                            }
+                        };
+                        window.position = address.position;
+                    }, () => {
+                        handleLocationError(true, infoWindow, map.getCenter());
+                    }
+                );
+            } else {
+                // Browser doesn't support Geolocation
+                handleLocationError(false, infoWindow, map.getCenter(), map);
+            }
+        }
+    }
+    function handleLocationError(browserHasGeolocation, infoWindow, pos, map) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(
+        browserHasGeolocation
+            ? "Error: The Geolocation service failed."
+            : "Error: Your browser doesn't support geolocation."
+        );
+        infoWindow.open(map);
     }
 </script>
 {% endblock %}
