--- a/authentication/templates/auth/mails/verify-account.html
+++ b/authentication/templates/auth/mails/verify-account.html
@@ -18,7 +18,7 @@
   </header>
   <section class="container">
     <div class="head">
-      <p>Hola, {{ user.full_name }}</p>
+      <p>Hola, {{ user.username }}</p>
       <p>Para verificar tu correo electrónico, has click en el siguiente enlace:</p>
       <a href="{{ protocol }}://{{ domain }}{% url 'auth:activate' uidb64=uid token=token %}">{{ protocol }}://{{ domain }}{% url 'auth:activate' uidb64=uid token=token %}</a>
     </div>
